Added on/off Google captcha in settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -8,3 +8,7 @@ queue_path = /opt/kaptive/queue/
 [General]
 job_waiting_time = 60
 refresh_waiting_time = 60000
+
+[Security]
+#yes: enable, no: disable captcha
+captcha = yes
