--- a/settings.ini
+++ b/settings.ini
@@ -1,9 +1,9 @@
 [Path]
-base_path = /opt/kaptive/
-reference_database_path = /opt/kaptive/reference_database/
-upload_path = /opt/kaptive/uploads/
-download_path = applications/kaptive/downloads/
-queue_path = /opt/kaptive/queue/
+base_path = /opt/web2py/applications/kaptive/
+reference_database_path = /opt/web2py/applications/kaptive/reference_database/
+upload_path = /opt/web2py/applications/kaptive/uploads/
+download_path = /opt/web2py/applications/kaptive/downloads/
+queue_path = /opt/web2py/applications/kaptive/queue/
 
 [General]
 job_waiting_time = 60
